# pretix-aircash-integration

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_aircash_integration/: apps.py  payment.py  signals.py  tasks.py  urls.py  utils.py  views.py
pretix_aircash_integration/locale/de/LC_MESSAGES/: django.po
pretix_aircash_integration/templates/pretix_aircash_integration/: chechout.html  pending_box.html  selection_qr.html
